--- a/Ej05.html
+++ b/Ej05.html
@@ -6,7 +6,7 @@
         <table border="1px">
             <caption>Análisis de ventas anuales</caption>
             <tr align="center">
-                <td rowspan="2">Años</td>
+                <td rowspan="2">Año</td>
                 <th colspan="4"> Expansión de ventas</th>
             </tr>
             <tr align="center">
