--- a/Ej06.html
+++ b/Ej06.html
@@ -40,7 +40,12 @@
             <fieldset>
                 <legend>Ficha de proyección</legend>
                 <label>Sala:</label>
-                <input type="text">
+                <select>
+                    <option>Cine de barrio</option>
+                    <option>Cine Yelmo</option>
+                    <option>Cinesa</option>
+                    <option>Cines Full HD</option>
+                </select>
                 <br>
                 <textarea  rows="10" cols="55"></textarea>
                 <br>
