--- a/Ej06.html
+++ b/Ej06.html
@@ -2,7 +2,7 @@
     <head>
     </head>
     <body>
-        <form action="Ej06.php" method="get">
+        <form action="Ej06.php" method="get" enctype="multipart/form-data">
             <fieldset>
                 <legend>Ficha de la película</legend>
                 <label>Título</label>
