--- a/Ej06.html
+++ b/Ej06.html
@@ -47,7 +47,7 @@
                     <option>Cines Full HD</option>
                 </select>
                 <br>
-                <textarea  rows="10" cols="55"></textarea>
+                <textarea  rows="10" cols="55" placeholder="Escribe una breve sinopsis"></textarea>
                 <br>
                 <select>
                     <option>Inglés</option>
